# rustdesk

./: .gitmodules
flutter/lib/: common.dart
flutter/lib/desktop/pages/: connection_page.dart  desktop_setting_page.dart  install_page.dart
flutter/web/js/src/: connection.ts
flutter/windows/runner/: Runner.rc
libs/hbb_common/src/: config.rs
libs/portable/: Cargo.toml
src/: core_main.rs  lang.rs  tray.rs  ui.rs
src/lang/: cn.rs
src/platform/: windows.rs
src/ui/: index.tis  install.tis
