[package]
name = "rustdesk-portable-packer"
version = "1.2.4"
edition = "2021"
description = "梓晨远程"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
brotli = "3.4"
dirs = "5.0"
md5 = "0.7"
winapi = { version = "0.3", features = ["winbase"] }

[package.metadata.winres]
LegalCopyright = "Copyright © 2024 山东梓晨网络科技有限公司 All rights reserved."
ProductName = "梓晨远程"
OriginalFilename = "梓晨远程.exe"
FileDescription = "梓晨远程"
#ProductVersion = ""

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = [ "winnt", "pdh", "synchapi" ] }


